--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     player</button>
 
             </div>
-            <div id="sub-container" class=" rounded-md p-3  overflow-y-auto mx-[10%] w-[80%] h-[65vh] bg-black">
+            <div id="sub-container" class=" rounded-md p-3 flex flex-col  overflow-y-auto mx-[10%] w-[80%] h-[65vh] bg-black">
 
             </div>
 
