--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                 <div>
                     <label for="name" class="block font-medium text-gray-700">Nom</label>
                     <input type="text" id="name" name="name"
-                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" required>
+                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                 </div>
 
                 <div>
                     <label for="position" class="block font-medium text-gray-700">Position</label>
                     <select id="position" name="position"
-                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" required>
+                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                         <option disabled selected hidden>Choose position</option>
                         <option value="LW">LW</option>
                         <option value="ST">ST</option>
@@ -133,7 +133,7 @@
                 <div>
                     <label for="place" class="block font-medium text-gray-700">Place</label>
                     <select id="place" name="position"
-                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" required>
+                        class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                         <option disabled selected hidden>Choose player place</option>
                         <option value="substitution">Substitution</option>
                         <option value="field">Field</option>
@@ -145,38 +145,33 @@
                     <div>
                         <label for="pace" class="block font-medium text-gray-700">Pace (PAC)</label>
                         <input name="pace" type="number" id="pace"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="shooting" class="block font-medium text-gray-700">Shooting (SHO)</label>
                         <input name="shooting" type="number" id="shooting"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" 
+                            >
                     </div>
                     <div>
                         <label for="passing" class="block font-medium text-gray-700">Passing (PAS)</label>
                         <input name="passing" type="number" id="passing"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="dribbling" class="block font-medium text-gray-700">Dribbling (DRI)</label>
                         <input name="dribbling" type="number" id="dribbling"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="defending" class="block font-medium text-gray-700">defending (DEF)</label>
                         <input name="defending" type="number" id="defending"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="physical" class="block font-medium text-gray-700">Physical (PHY)</label>
                         <input name="physical" type="number" id="physical"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                 </div>
 
@@ -184,38 +179,32 @@
                     <div>
                         <label for="diving" class="block font-medium text-gray-700">Diving (DIV)</label>
                         <input name="diving" type="number" id="diving"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="handling" class="block font-medium text-gray-700">Handling (HAN)</label>
                         <input name="handling" type="number" id="handling"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="kicking" class="block font-medium text-gray-700">Kicking (KIC)</label>
                         <input name="kicking" type="number" id="kicking"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="reflexes" class="block font-medium text-gray-700">Reflexes (REF)</label>
                         <input name="reflexes" type="number" id="reflexes"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="speed" class="block font-medium text-gray-700">speed (SPE)</label>
                         <input name="speed" type="number" id="speed"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
                         <label for="positioning" class="block font-medium text-gray-700">Positioning (POS)</label>
                         <input name="positioning" type="number" id="positioning"
-                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" min="1"
-                            max="100">
+                            class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                 </div>
 
