adding some fontionality and correcting some bugs

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <div>
                     <label for="position" class="block font-medium text-gray-700">Position</label>
-                    <select id="position" name="position"
+                    <select id="position" contenteditable="false" name="position"
                         class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                         <option disabled selected hidden>Choose position</option>
                         <option value="LW">LW</option>
@@ -141,7 +141,7 @@
                             class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" >
                     </div>
                     <div>
-                        <label for="shooting" class="block font-medium text-gray-700">Shooting (SHO)</label>
+                        <label  for="shooting" class="block font-medium text-gray-700">Shooting (SHO)</label>
                         <input name="shooting" type="number" id="shooting"
                             class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" 
                             >
