--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <label for="position" class="block font-medium text-gray-700">Position</label>
                     <select id="position" contenteditable="false" name="position"
                         class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
-                        <option disabled selected hidden>Choose position</option>
+                        <option class="disabled" selected hidden>Choose position</option>
                         <option value="LW">LW</option>
                         <option value="ST">ST</option>
                         <option value="RW">RW</option>
